name:               josuecaraballo
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , containers == 0.5.11.0
                  , binary == 0.8.7.0
                  , pandoc == 2.2.*
                  , lrucache == 1.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
