name:               josuecaraballo
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.5 && < 5.0
                  , hakyll
                  , pandoc >= 2.0 && < 2.2
                  , containers >= 0.4 && < 0.6
  ghc-options:      -threaded
  default-language: Haskell2010
